--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,8 @@ li {
   position: absolute;
   top: 0px;
   left: 0px;
-  color: transparent; /*hides span's text*/
-  background-size: cover; /* covers whole viewport */
+  color: transparent;
+  background-size: cover;
   background-position: center center;
   background-repeat: none;
   opacity: 0;
@@ -127,23 +127,28 @@ li {
 }
 @media screen and (max-width: 1024px) {
     .logo-container img {
-        width: 75%;
+        width: 50%;
+        margin-bottom: 25px;
     }
     .wrapper  {
-        width: 80%;
+        width: 60%;
     }
     .content .content-heading {
-        font-size: 45px;
+        font-size: 35px;
         margin-bottom: 15px;
     }
     .content .content-text {
-        font-size: 18px;
+        font-size: 16px;
     }
 
 }
 @media screen and (max-width: 650px) {
+    .hero-container {
+        padding-block: 10px;
+    }
     .logo-container img {
-        width: 50%;
+        width: 40%;
+        margin-bottom: 10px;
     }
     .wrapper  {
         width: 90%;
@@ -170,17 +175,4 @@ li {
     .content .content-text {
         font-size: 14px;
     }
-}.example {
-    display: -ms-grid;
-    display: grid;
-    -webkit-transition: all .5s;
-    -o-transition: all .5s;
-    transition: all .5s;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-    background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
-    background: -o-linear-gradient(top, white, black);
-    background: linear-gradient(to bottom, white, black);
 }
