--- a/styles.css
+++ b/styles.css
@@ -90,13 +90,15 @@ li {
         -ms-flex-align: center;
             align-items: center;
     height: 100%;
-    width: 60%;
+    max-width: 70%;
+    width: 100%;
     margin: 0 auto;
     color: white;
     z-index: 99;
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
+    padding: 10px;
 }
 .logo-container img {
     width: 80%;
@@ -105,13 +107,13 @@ li {
     margin: 0 auto;
     fill: white;
     stroke: white;
-    margin-bottom: 25px;
+    margin-bottom: 50px;
 }
 .content {
     text-align: center;
 }
 .content .content-heading {
-    font-size: 45px;
+    font-size: 50px;
     font-family: 'Italiana', serif;
     font-weight: 900;
     margin: 30px 0px;
@@ -126,53 +128,59 @@ li {
     font-weight: 600;
 }
 @media screen and (max-width: 1024px) {
-    .logo-container img {
-        width: 50%;
-        margin-bottom: 25px;
+    .wrapper {
+        max-width: 90%;
     }
-    .wrapper  {
-        width: 60%;
+    .logo-container img {
+        width: 45%;
+        margin-bottom: 25px;
     }
     .content .content-heading {
         font-size: 35px;
-        margin-bottom: 15px;
     }
     .content .content-text {
-        font-size: 16px;
+        font-size: 16px
     }
-
 }
 @media screen and (max-width: 650px) {
-    .hero-container {
-        padding-block: 10px;
+    .wrapper {
+        max-width: 90%;
     }
     .logo-container img {
-        width: 40%;
-        margin-bottom: 10px;
-    }
-    .wrapper  {
-        width: 90%;
+        width: 55%;
+        margin-bottom: 20px;
     }
     .content .content-heading {
-        font-size: 40px;
-        margin-bottom: 15px;
+        font-size: 35px;
     }
     .content .content-text {
         font-size: 16px;
     }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 500px) {
     .logo-container img {
-        width: 35%;
-    }
-    .wrapper  {
-        width: 90%;
+        width: 30%;
+        margin-bottom: 15px;
     }
     .content .content-heading {
-        font-size: 20px;
-        margin-bottom: 15px;
+        font-size: 25px;
     }
     .content .content-text {
         font-size: 14px;
+    }
+}
+@media screen and (max-width: 500px) {
+    .wrapper {
+        max-width: 90%;
+    }
+    .logo-container img {
+        width: 30%;
+        margin-bottom: 5px;
+    }
+    .content .content-heading {
+        font-size: 20px;
+    }
+    .content .content-text {
+        font-size: 12px;
     }
 }
