--- a/styles.css
+++ b/styles.css
@@ -100,8 +100,11 @@ li {
     transform: translateX(-50%);
     padding: 10px;
 }
+.logo-container {
+    max-width: 20%;
+}
 .logo-container img {
-    width: 80%;
+    width: 100%;
     display: block;
     height: auto;
     margin: 0 auto;
@@ -131,8 +134,11 @@ li {
     .wrapper {
         max-width: 90%;
     }
+    .logo-container {
+        max-width: 30%;
+    }
     .logo-container img {
-        width: 45%;
+        width: 100%;
         margin-bottom: 25px;
     }
     .content .content-heading {
@@ -143,11 +149,14 @@ li {
     }
 }
 @media screen and (max-width: 650px) {
+    .logo-container {
+        max-width: 25%;
+    }
     .wrapper {
         max-width: 90%;
     }
     .logo-container img {
-        width: 55%;
+        width: 100%;
         margin-bottom: 20px;
     }
     .content .content-heading {
@@ -159,7 +168,7 @@ li {
 }
 @media screen and (max-width: 500px) {
     .logo-container img {
-        width: 30%;
+        width: 100%;
         margin-bottom: 15px;
     }
     .content .content-heading {
@@ -174,7 +183,7 @@ li {
         max-width: 90%;
     }
     .logo-container img {
-        width: 30%;
+        width: 100%;
         margin-bottom: 5px;
     }
     .content .content-heading {
