--- a/styles.css
+++ b/styles.css
@@ -53,25 +53,25 @@ li {
   background-repeat: none;
   z-index: 0;
   opacity: 0;
-  animation: backgroundSlideshow 30s linear infinite 0s;
+  animation: backgroundSlideshow 20s linear infinite;
 }
 .slideshow li:nth-child(1) .img-bg-slide {
    background-image: linear-gradient(-70deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('./images/hero-image-1.jpg');
 }
 .slideshow li:nth-child(2) .img-bg-slide { 
     background-image: linear-gradient(-70deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('./images/hero-image-2.jpg');
-    animation-delay: 7.5s; 
+    animation-delay: 5s; 
 }
 .slideshow li:nth-child(3) .img-bg-slide { 
     background-image: linear-gradient(-70deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('./images/hero-image-3.jpg');
-    animation-delay: 15s; 
+    animation-delay: 10s; 
 }
 @keyframes backgroundSlideshow {
   0% { opacity: 0;}
   12.5% { opacity: 1;}
   25% { opacity: 1;}
   37.5% { opacity: 0;}
-  50% { opacity: 1; }
+  100% {opacity: 1; background-image: linear-gradient(-70deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('./images/hero-image-1.jpg');}
 }
 
 .wrapper {
