--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,8 @@ li {
   background-repeat: none;
   z-index: 0;
   opacity: 0;
-  animation: backgroundSlideshow 20s linear infinite;
+  animation: backgroundSlideshow 20s ease-in-out infinite;
+  animation-fill-mode: both;
 }
 .slideshow li:nth-child(1) .img-bg-slide {
    background-image: linear-gradient(-70deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('./images/hero-image-1.jpg');
@@ -68,10 +69,10 @@ li {
 }
 @keyframes backgroundSlideshow {
   0% { opacity: 0;}
-  12.5% { opacity: 1;}
   25% { opacity: 1;}
-  37.5% { opacity: 0;}
-  100% {opacity: 1; background-image: linear-gradient(-70deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('./images/hero-image-1.jpg');}
+  50% { opacity: 1;}
+  75% { opacity: 0;}
+  100% {opacity: 0;}
 }
 
 .wrapper {
